# thirdplace

./: .env  .flake8  .gitignore  LICENSE  README.rst  TODO  default.settings.cfg  justfile  pyproject.toml  requirements.txt  setup.py
dev/: dev.cfg
src/thirdplace/: __init__.py  __main__.py  app.py  core.py  forms.py  forum.py  gravatar.py  models.py  security.py  tools.py  views.py
src/thirdplace/static/: dayjs.min.js  screen.css
src/thirdplace/templates/: forums.html  layout.html  posts.html  topics.html
src/thirdplace/templates/security/: README  _macros.html  login_user.html  logout_user.html  register_user.html
thirdplace/: __main__.py  app.py  core.py  forms.py  gravatar.py  models.py  tools.py  views.py
thirdplace/static/: print.css  screen.css
thirdplace/templates/: forums.html  layout.html  posts.html  topics.html
thirdplace/templates/security/: login_user.html
