[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thirdplace"
dynamic = ["version"]
description = "Thirdplace"
license = "MIT"
authors = [
    {name = "Keith Gaughan", email = "k@stereochro.me"},
]
requires-python = ">=3.7"
readme = "README.rst"
classifiers = [
    "Environment :: Other Environment",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "bbcode==1.1.0",
    "click==8.1.3",
    "Flask==2.3.2",
    "Flask-Security==3.0.0",
    "Flask-SQLAlchemy==3.0.3",
    "Flask-WTF==0.15.1",
]

[project.scripts]
thirdplace-tool = "thirdplace.tools:cli"

[project.urls]
Issues = "https://github.com/kgaughan/thirdplace/issues"
Source = "https://github.com/kgaughan/thirdplace"

[tool.hatch.version]
path = "thirdplace/__init__.py"

[tool.hatch.envs.style]
dependencies = [
	"black",
	"flake8",
	"isort",
	"mypy",
]

[tool.hatch.envs.style.scripts]
check = [
	"flake8 .",
	"black --check --diff .",
	"isort --check-only --diff .",
	"mypy .",
]
fmt = [
	"isort .",
	"black .",
]

[tool.isort]
profile = "black"
force_sort_within_sections = true
include_trailing_comma = true
order_by_type = false
