#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thirdplace"
dynamic = ["version"]
description = "Thirdplace"
license = "MIT"
authors = [
	{name = "Keith Gaughan", email = "k@stereochro.me"},
]
requires-python = ">=3.9"
readme = "README.rst"
classifiers = [
	"Environment :: Other Environment",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.9",
	"Topic :: Internet :: WWW/HTTP",
	"Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
	"bbcode==1.1.0",
	"click==8.1.7",
	"Flask==3.0.3",
	"Flask-Security-Too==5.3.3",
	"Flask-SQLAlchemy==3.1.1",
	"Flask-WTF==1.2.1",
	"pytz",
]

[project.scripts]
thirdplace-tool = "thirdplace.tools:cli"

[project.urls]
Issues = "https://github.com/kgaughan/thirdplace/issues"
Source = "https://github.com/kgaughan/thirdplace"

[tool.rye]
dev-dependencies = [
    "pytest>=8.2.2",
    "mypy>=1.10.1",
    "types-flask>=1.1.6",
]
universal = true
generate-hashes = true
managed = true

[tool.hatch.version]
path = "thirdplace/__init__.py"

[tool.hatch.build]
exclude = [".coveragerc", "Makefile", ".github/", ".*_cache/", "tests/"]
