#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "thirdplace"
dynamic = ["version"]
description = "Thirdplace"
license = { file = "LICENSE" }
authors = [{ name = "Keith Gaughan", email = "k@stereochro.me" }]
requires-python = ">=3.11"
readme = "README.rst"
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Other Environment",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
  "bbcode>=1.1.0,<2",
  "click>=8.1.7,<9",
  "Flask>=3.0.3,<4",
  "Flask-Security-Too>=5.3.3,<6",
  "Flask-SQLAlchemy>=3.1.1,<4",
  "Flask-WTF>=1.2.1,<2",
  "pytz",
]

[project.urls]
Documentation = "https://github.com/kgaughan/thirdplace#readme"
Issues = "https://github.com/kgaughan/thirdplace/issues"
Source = "https://github.com/kgaughan/thirdplace"

[project.scripts]
thirdplace-tool = "thirdplace.tools:cli"

[dependency-groups]
dev = [
  "python-dotenv>=1.2.2",
  "mypy>=1.10.1",
  "pytest>=9.0.3",
  "pytest-cov>=5.0.0",
  "types-flask>=1.1.6",
]

[tool.hatch.build.targets.sdist]
include = ["src/thirdplace", "uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["src/thirdplace"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/thirdplace/_version.py"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "test"]

[tool.ruff.lint]
select = [
  "A",
  # "ANN",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "ISC002",
  "N",
  "PERF",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # "PT",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T",
  "TC",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "PLR0913", # Too many arguments
  "PLR2004", # Magic value used in comparison
  "PLW2901", # Redefined loop variable
  "S310",    # Audit URL open for permitted schemes
  "S317",    # Using xml to parse untrusted data is known to be vulnerable to XML attacks; use defusedxml equivalents
  "TID252",  # Prefer absolute imports over relative imports from parent modules
  "UP006",   # Use {to} instead of {from} for type annotation
  "UP035",   # Deprecated import
  "EM101",   # Exceptions must not use strings
  "EM102",   # Exception must not use f-string literal
  "T201",    # Print found
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252", "E501"]

[tool.pytest.ini_options]
minversion = "9.0"
addopts = [
  "-ra",
  "--cov=src/thirdplace",
  "--junitxml=tests/results.xml",
  "--cov-report=html",
]
junit_logging = "out-err"
junit_family = "xunit2"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/thirdplace/_version.py"]

[tool.coverage.report]
ignore_errors = true
# Regexes for lines to exclude from consideration
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
]

[tool.mypy]
ignore_missing_imports = true
